Refactored layout structure, added more content

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 baseurl: /cube
 pygments: true
 lsi: false
+markdown: maruku
 exclude: [CONTRIBUTING.md, cube.sublime-*, node_modules, Gruntfile.js, package.json]
