--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "semver": "~2.1.0",
     "grunt": "~0.4.1",
     "grunt-contrib-cssmin": "~0.6.2",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "async": "~0.2.9"
   }
 }
