Fixed version no.

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,14 @@
 baseurl: /cube
-pygments: true
+safe: true
 lsi: false
+pygments: true
 markdown: redcarpet
-exclude: [CONTRIBUTING.md, cube.sublime-*, node_modules, Gruntfile.js, package.json]
+exclude:
+  - CONTRIBUTING.md
+  - cube.sublime-*
+  - node_modules
+  - Gruntfile.js
+  - package.json
 
 version: 1.0.11
 
