--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "grunt": "~0.4.1",
     "grunt-contrib-cssmin": "~0.6.2",
     "grunt-contrib-concat": "~0.3.0",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "glob": "~3.2.7",
+    "request": "~2.27.0",
+    "q": "~0.9.7",
+    "unzip": "~0.1.9"
   }
 }
