Changed site theme to THX
added more in doc and demo

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ safe: true
 lsi: false
 pygments: true
 markdown: redcarpet
+permalink: /:categories/:title
 exclude:
   - CONTRIBUTING.md
   - cube.sublime-*
