--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,14 @@ lsi: false
 pygments: true
 markdown: redcarpet
 permalink: /:categories/:title
+encoding: utf-8
 exclude:
   - CONTRIBUTING.md
   - cube.sublime-*
   - node_modules
   - Gruntfile.js
   - package.json
+  - README.md
 
 version: 1.1.0
 
