--- a/_data/users.yml
+++ b/_data/users.yml
@@ -1,8 +1,8 @@
 - name: THX
-  homepage: http://thx.alibaba-inc.com
+  homepage: http://thx.github.io
 
 - name: Brix
-  homepage: http://brix.alibaba-inc.com
+  homepage: http://brix.github.io
 
 - name: Everything Jake
   homepage: http://cyj.me
