--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "cube",
-  "version": "1.2.1",
+  "version": "1.2.0",
   "private": true,
   "devDependencies": {
+    "gulp-concat": "~2.5.2",
+    "gulp-rename": "~1.2.2",
+    "gulp-minify-css": "~1.1.3",
+    "gulp-sass": "~2.0.1",
+    "gulp-replace": "~0.5.3",
     "semver": "~2.1.0",
-    "grunt": "~0.4.1",
-    "grunt-contrib-cssmin": "~0.6.2",
-    "grunt-contrib-concat": "~0.3.0",
     "glob": "~3.2.7",
     "request": "~2.27.0",
     "q": "~0.9.7",
