--- a/package.json
+++ b/package.json
@@ -1,17 +1,44 @@
 {
   "name": "cube",
   "version": "1.2.3",
+  "description": "Cube CSS framework",
   "private": true,
   "devDependencies": {
-    "gulp-concat": "~2.5.2",
-    "gulp-rename": "~1.2.2",
-    "gulp-minify-css": "~1.1.3",
-    "gulp-sass": "~2.0.1",
-    "gulp-replace": "~0.5.3",
-    "semver": "~2.1.0",
+    "autoprefixer": "~6.1.2",
+    "del": "~2.2.0",
     "glob": "~3.2.7",
-    "request": "~2.27.0",
+    "gulp-concat": "~2.5.2",
+    "gulp-cssnano": "~2.0.0",
+    "gulp-minify-css": "~1.1.3",
+    "gulp-postcss": "~6.0.1",
+    "gulp-rename": "~1.2.2",
+    "gulp-sass": "~2.0.1",
+    "gulp-size": "~2.0.0",
+    "gulp-sourcemaps": "~1.6.0",
+    "perfectionist": "~2.1.2",
+    "postcss-filter-gradient": "^0.1.1",
     "q": "~0.9.7",
+    "request": "~2.27.0",
+    "run-sequence": "~1.1.5",
+    "semver": "~2.1.0",
     "unzip": "~0.1.9"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "css",
+    "sass",
+    "framework",
+    "front-end"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:thx/cube.git"
+  },
+  "bugs": {
+    "url": "https://github.com/thx/cube/issues"
+  },
+  "author": "一丝",
+  "license": "MIT"
 }
