--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,10 @@ permalink: /:categories/:title
 encoding: utf-8
 exclude:
   - CONTRIBUTING.md
-  - cube.sublime-*
   - node_modules
-  - Gruntfile.js
+  - gulpfile.js
   - package.json
   - README.md
 
-version: 1.2.3
+version: 1.3.0
 
